--- a/src/banca/CreareUtilizator.form
+++ b/src/banca/CreareUtilizator.form
@@ -132,10 +132,22 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="TextCNP">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TextCNPKeyReleased"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JFormattedTextField()"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="TextEuro">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TextEuroKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="TextLei">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TextLeiKeyReleased"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
