--- a/src/banca/Client.form
+++ b/src/banca/Client.form
@@ -31,12 +31,12 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                      <Component id="BtnLichidare" min="-2" pref="117" max="-2" attributes="0"/>
-                      <Component id="BtnRetragere" min="-2" max="-2" attributes="0"/>
-                      <Component id="BtnInfo" alignment="1" min="-2" pref="117" max="-2" attributes="0"/>
+                      <Component id="BtnLichidare" linkSize="1" min="-2" pref="117" max="-2" attributes="0"/>
+                      <Component id="BtnRetragere" linkSize="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="BtnInfo" linkSize="1" alignment="1" min="-2" pref="117" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="35" max="32767" attributes="0"/>
+              <EmptySpace pref="43" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
